finished first draft of the thesis, adds termination to mealy machine function

--- a/Tex ausarbeitung/TUM_Latex_Wiss-Arbeiten/200805_TUM_LaTex_Vorlage_Wissenschaftliche Arbeit/Ressourcen/Praeambel.tex
+++ b/Tex ausarbeitung/TUM_Latex_Wiss-Arbeiten/200805_TUM_LaTex_Vorlage_Wissenschaftliche Arbeit/Ressourcen/Praeambel.tex
@@ -7,7 +7,7 @@
 \usepackage[utf8]{inputenc} % Textkodierung: UTF-8
 \usepackage[T1]{fontenc} % Zeichensatzkodierung
 
-\usepackage[ngerman]{babel} % Deutsche Lokalisierung
+\usepackage[english]{babel} % Deutsche Lokalisierung
 \usepackage{graphicx} % Grafiken
 
 % Schriftart Helvetica:
